--- a/style.css
+++ b/style.css
@@ -7,7 +7,29 @@ body{
     max-height: 250px;
     display: block;
     margin: auto;
+    animation: bounce 1s infinite alternate;
+    -webkit-animation: bounce 0.9s infinite alternate-reverse;
+}
 
+@keyframes bounce {
+    from {
+      transform: translateY(0px);
+    }
+    to {
+      transform: translateY(-10px);
+    }
+  }
+  @-webkit-keyframes bounce {
+    from {
+      transform: translateY(0px);
+    }
+    to {
+      transform: translateY(-15px);
+    }
+  }
+
+a{
+    text-decoration: none;
 }
 
 #frase{
@@ -22,6 +44,7 @@ body{
     align-items: center;
     gap: 15px;
     margin-top: 10px;
+    
 }
 
 .social{
@@ -43,10 +66,10 @@ body{
 #instagram{
     margin-top: 10px;
     background-image: linear-gradient(45deg, #3198E2, #6d59c0, #B93590, #E33F5F, #FDD579);
- 
 }
 
 #instagram:hover{
+    cursor: pointer;
     transition: 1s all;
     transform: scale(1.1);
 }
@@ -61,6 +84,7 @@ body{
 }
 
 #linkedin:hover{
+    cursor: pointer;
     transition: 1s all;
     transform: scale(1.1);
 }
@@ -71,6 +95,7 @@ body{
 }
 
 #github:hover{
+    cursor: pointer;
     transition: 1s all;
     transform: scale(1.1);
 }
